# bookworm

./: .pre-commit-config.yaml  Makefile  README.md  bookworm.service  pyproject.toml
.vim/: coc-settings.json
bookworm/: __main__.py
bookworm/config/: __init__.py  prod.json
bookworm/service/: m3u.py  nfc.py
bookworm/util/: logger.py
tests/unit/: test_reader.py
